[fix bug 1231732] Cropped button on Firefox iOS page

--- a/media/css/firefox/ios.less
+++ b/media/css/firefox/ios.less
@@ -662,7 +662,6 @@ a.go {
     .font-size(@smallFontSize);
     color: #fff;
     text-align: center;
-    margin-top: 10px;
 }
 
 
@@ -786,3 +785,10 @@ html[lang=ja] {
         text-align: left;
     }
 }
+// Bug 1231732
+html[lang|="en"] {
+  .fxfamilynav-cta-wrapper .send-to {
+      margin-top: 10px;
+  }
+}
+
